# openalex-types

./: .bumpversion.cfg  .gitignore  README.md  pyproject.toml
scripts/: example_upload.py
src/openalex_types/: __init__.py  authors.py  common.py  concepts.py  data.py  funders.py  institutions.py  keywords.py  publishers.py  sources.py  topics.py  utils.py  works.py
tests/: test_authors.py  test_institutions.py  test_works.py
